log
Thu 09 May 2024 06:15:24 PM UTC: 
 tests:  1|8
total_score: 0/70
60c5388
Thu 09 May 2024 06:17:27 PM UTC: 
 treemap.c | 12 +++++++-----
 1 file changed, 7 insertions(+), 5 deletions(-)
 tests:  4|7
total_score: 5/70
942d82a
Thu 09 May 2024 06:32:30 PM UTC: 
 treemap.c | 36 ++++++++++++++++++++++++++++++++++--
 1 file changed, 34 insertions(+), 2 deletions(-)
 tests:  3|7
total_score: 5/70
0d433ad
Thu 09 May 2024 06:53:04 PM UTC: 
 treemap.c | 16 +++++++++++++++-
 1 file changed, 15 insertions(+), 1 deletion(-)
 tests:  10|6
total_score: 15/70
83de6c1
Thu 09 May 2024 06:59:58 PM UTC: 
 treemap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  10|6
total_score: 15/70
e9d16de
Thu 09 May 2024 07:00:08 PM UTC: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘minimum’:
treemap.c:87:1: error: control reaches end of non-void function [-Werror=return-type]
   87 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
78b9f66
Thu 09 May 2024 07:01:05 PM UTC: 
 treemap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  12|5
total_score: 15/70
95a0101
Thu 09 May 2024 07:03:12 PM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  12|5
total_score: 15/70
fb161dc
Thu 09 May 2024 07:17:58 PM UTC: 
 treemap.c | 55 ++++++++++++++++++++++++++++++++++++++++++++++++++++++-
 1 file changed, 54 insertions(+), 1 deletion(-)
 tests:  0|0
3e7e78a
Thu 09 May 2024 07:18:42 PM UTC: 
 treemap.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  0|0
76e8151
